# hermes-satellite

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
docs/: README.md  ROADMAP.md  hermes-api.md  hermes-satellite.md  home-assistant.md  moonshine.md  networking.md  piper.md  porcupine.md  setup-wizard.md  wakeword.md
docs/hardware/: pi4-respeaker-v1.md  pi5-respeaker-v2.md  seeed-software.md
scripts/: configure-satellite.sh  logs-satellite.sh  update-satellite.sh  wm8960-mixer.sh
src/hermes_satellite/: __init__.py  __main__.py  app.py  button.py  cli.py  config.py  doctor.py  platform.py
src/hermes_satellite/audio/: __init__.py  alsa_backend.py  base.py  mic.py  mock_backend.py  vad.py
src/hermes_satellite/core/: __init__.py  earcons.py  events.py  pipeline.py  settings.py  speech_text.py  states.py
src/hermes_satellite/hermes/: __init__.py  base.py  client.py  mock_client.py
src/hermes_satellite/integrations/: __init__.py  mqtt.py
src/hermes_satellite/leds/: __init__.py  apa102_backend.py  base.py  controller.py  mock_backend.py
src/hermes_satellite/stt/: __init__.py  base.py  mock_backend.py  moonshine_backend.py
src/hermes_satellite/tts/: __init__.py  base.py  mock_backend.py  piper_backend.py
src/hermes_satellite/wakeword/: __init__.py  base.py  mock_backend.py  openwakeword_backend.py  porcupine_backend.py
src/hermes_satellite/wizard/: __init__.py  mixer.py  page.py  server.py
systemd/: hermes-satellite.service
tests/: test_audio_capture.py  test_cli_args.py  test_config.py  test_doctor.py  test_earcons.py  test_hermes_client.py  test_led_controller.py  test_mqtt.py  test_pipeline.py  test_settings.py  test_speech_text.py  test_state_machine.py  test_stt_tts.py  test_wakeword.py  test_wakeword_oww.py  test_wizard.py  test_wizard_mixer.py
